# floor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg  vcpkg.json
include/floor/: exceptions.h  structures.h  utilities.h
include/floor/audio/: audio.h  buses.h  memory.h  mixer.h  type.h
include/floor/events/: action.h  condition.h  event.h  type.h
include/floor/events/action/: audio.h  base.h  render.h
include/floor/events/timing/: easing.h  time.h
include/floor/render/: config.h  layer.h  object.h  texture.h  type.h
include/floor/render/object/: animation.h  interactive.h  number.h  percent.h  string.h
include/floor/screen/: screen.h
src/: utilities.cpp
src/audio/: buses.cpp  memory.cpp  mixer.cpp
src/events/: action.cpp  condition.cpp  event.cpp  type.cpp
src/events/action/: audio.cpp  base.cpp  render.cpp
src/events/timing/: time.cpp
src/render/: config.cpp  layer.cpp  object.cpp  texture.cpp
src/render/object/: animation.cpp  interactive.cpp  percent.cpp  string.cpp
src/screen/: screen.cpp
